--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/data-unification?serverTimezone=MET
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.initialization-mode=always
 spring.batch.initialize-schema=always
