--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.initialization-mode=always
 spring.batch.initialize-schema=always
+#data-files
+bath.files.directory=data/movieratingtweets
+batch.input.users={batch.files.directory}/users.dat
+batch.input.movies={batch.files.directory}/movies.dat
+batch.input.ratings={batch.files.directory}/ratings.dat
