Fixed configuration for userLoad step

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/data-unification?serverTimezone=MET
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=
 spring.batch.initialize-schema=always
 #data-files
-bath.files.directory=data/movieratingtweets
-batch.input.users={batch.files.directory}/users.dat
-batch.input.movies={batch.files.directory}/movies.dat
-batch.input.ratings={batch.files.directory}/ratings.dat
+batch.files.directory=data/movieratingtweets
+batch.input.users=${batch.files.directory}/users.dat
+batch.input.movies=${batch.files.directory}/movies.dat
+batch.input.ratings=${batch.files.directory}/ratings.dat
